# ledgerline-money-tracker

./: .editorconfig  .env.example  .gitignore  .npmrc  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/: README.md
apps/money-tracker/: .eslintrc.cjs  .gitignore  .lens-meta.json  .lens-meta.workflow.js  README.md  THEMING.md  next.config.mjs  package.json  serve-static.mjs  tailwind.config.ts  tsconfig.json
backend/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
backend/api/: build.gradle.kts
backend/app/: build.gradle.kts
docs/: MODULE-MAP.md  README.md  api-and-services.md  db-schema-design.md  development.md
infra/: README.md
scripts/: dev-down.ps1  dev-up.ps1  k3d-up.ps1  seed-demo.sh
services/canonicalizer/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements-llm.txt  requirements-ml.txt  requirements.txt  schema.sql
services/canonicalizer/canonicalizer/: __init__.py  api.py  categorize.py  config.py  dictionary.py  embeddings.py  llm.py  normalize.py  pipeline.py  recurring.py  service.py  spend.py  store.py  types.py
services/canonicalizer/data/: merchants.json
services/canonicalizer/eval/: category_evalset.json  evalset.json  run_category_eval.py  run_eval.py  run_recurring_eval.py  txn_history.json
services/canonicalizer/tests/: conftest.py  test_categorize.py  test_llm_langgraph.py  test_normalize.py  test_pipeline.py  test_recurring.py  test_spend.py  test_store.py
(+266 files in other folders)
